ingress-rules-deploy/ingress-rules-master.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: myapp-ingress-master
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/mergeable-ingress-type: master
spec:
  tls:
    - hosts:
        - wildcard.your-dns.your-tld
  rules:
    - host: wildcard.your-dns.your-tld
